--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -17,25 +18,26 @@
 	<button id="start">Start</button>
 	<button id="reset">Reset</button>
 
-	<table>
+	<table id = grid>
 		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
+			<td class="frontImage" id="1" onclick="toggleClass(this)"></td>
+			<td class="frontImage" id="2" onclick="toggleClass(this)"></td><
+			<td class="frontImage" id="3" onclick="toggleClass(this)"></td>
+			<td class="frontImage" id="4" onclick="toggleClass(this)"></td>
 		</tr>
 		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
+			<td class="frontImage" id="5" onclick="toggleClass(this)"></td>
+			<td class="frontImage" id="6" onclick="toggleClass(this)"></td>
+			<td class="frontImage" id="7" onclick="toggleClass(this)"></td>
+			<td class="frontImage" id="8" onclick="toggleClass(this)"></td>
 		</tr>
 		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
+			<td class="frontImage" id="9" onclick="toggleClass(this)"></td>
+			<td class="frontImage" id="10" onclick="toggleClass(this)"></td>
+			<td class="frontImage" id="11" onclick="toggleClass(this)"></td>
+			<td class="frontImage" id="12" onclick="toggleClass(this)"></td>
 		</tr>
 	</table>	
+		
 </body>
 </html>
