add flip logic and game board function

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	<button id="start">Start</button>
 	<button id="reset">Reset</button>
 
-	<table id = grid>
+	<!--<table>
 		<tr>
 			<td class="frontImage" id="1" onclick="toggleClass(this)"></td>
-			<td class="frontImage" id="2" onclick="toggleClass(this)"></td><
+			<td class="frontImage" id="2" onclick="toggleClass(this)"></td>
 			<td class="frontImage" id="3" onclick="toggleClass(this)"></td>
 			<td class="frontImage" id="4" onclick="toggleClass(this)"></td>
 		</tr>
@@ -37,7 +37,9 @@
 			<td class="frontImage" id="11" onclick="toggleClass(this)"></td>
 			<td class="frontImage" id="12" onclick="toggleClass(this)"></td>
 		</tr>
-	</table>	
-		
+	</table>	-->
+	<div id="memory_board"></div>
+	
+
 </body>
 </html>
